--- a/configuration.properties
+++ b/configuration.properties
@@ -5,6 +5,7 @@ amazonUrl=https://www.amazon.com
 
 wiseUrl=https://www.wisequarter.com
 arabamUrl=https://www.arabam.com
+herokuUrl=https://the-internet.herokuapp.com/add_remove_elements/
 
 
 
