--- a/configuration.properties
+++ b/configuration.properties
@@ -12,10 +12,23 @@ herokuUrl=https://the-internet.herokuapp.com/add_remove_elements/
 
 myGecerliEmail=user_1106152@login.com
 myGecerliPassword=472292157
-myUrl=https://mycoursedemy.com/
+myUrl=https://qualitydemy.com/
 myYanlisEmail=3321@gmail.com
 myYanlisPassword=87654321
 myCourseTitle=Java
 myCoursePrice=100
 myDiscount=50
 myMetaKeywords=Java kursu
+
+
+
+
+
+myYanlisEmail1=33c21@gmail.com
+myYanlisPassword1=876543c21
+myYanlisEmail2=3v321@gmail.com
+myYanlisPassword2=87654v321
+myYanlisEmail3=332d1@gmail.com
+myYanlisPassword3=876d54321
+myYanlisEmail4=3h321@gmail.com
+myYanlisPassword4=8765h4321
