--- a/configuration.properties
+++ b/configuration.properties
@@ -1,6 +1,6 @@
 browser =chrome
 
-
+automationUrl=http://automationexercise.com
 amazonUrl=https://www.amazon.com
 
 wiseUrl=https://www.wisequarter.com
